--- a/ansible.cfg
+++ b/ansible.cfg
@@ -2,7 +2,7 @@
 inventory = ./hosts.cfg
 remote_user = ansible
 [privilege_escalation]
-become = true
+# become = true
 become_method = sudo
 become_user = root
 become_ask_pass = false
